--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,6 @@ collections:
 defaults:
   - scope:
       path: ""
-      type: "authors"
-    values:
-      layout: "author"
-  - scope:
-      path: ""
       type: "posts"
     values:
       layout: "post"
@@ -19,3 +14,5 @@ defaults:
       layout: "default"
       
 highlighter: rouge
+
+excerpt_separator: <!--more-->
